--- a/roles/gelara/templates/my_custom.cnf.j2
+++ b/roles/gelara/templates/my_custom.cnf.j2
@@ -10,7 +10,7 @@ wsrep_provider=/usr/lib64/galera-4/libgalera_smm.so
 
 # Galera Cluster Configuration
 wsrep_cluster_name="mariadb-cluster"
-wsrep_cluster_address="gcomm://{% for host in groups['maria'][:-1] %}hostvars[{{ host }}].ansible_host,{% endif %}{{ hostvars[groups['maria'][-1]].ansible_host }}"
+wsrep_cluster_address="gcomm://{% for host in groups['maria'][:-1] %}hostvars[{{ host }}].ansible_host,{% endfor %}{{ hostvars[groups['maria'][-1]].ansible_host }}"
 
 # Galera Synchronization Configuration
 wsrep_sst_method=rsync
