--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -4,10 +4,10 @@ global:
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['{{ hostvars['monitoring'].ansible_host }}:9090']
+      - targets: ['{{ hostvars[groups['monitoring'].0].ansible_host }}:9090']
         labels:
           instance: monitoring
-          address: {{ hostvars['monitoring'].ansible_host }}:9090
+          address: {{ hostvars[groups['monitoring'].0].ansible_host }}:9090
   - job_name: 'node_exporter'
     static_configs:
 {% for host in groups['all'] %}
