--- a/roles/haproxy/templates/haproxy.cfg.j2
+++ b/roles/haproxy/templates/haproxy.cfg.j2
@@ -14,11 +14,19 @@ userlist admincred
 	user admin password {{ monitoring_admin_password | string | password_hash('sha256') }}
 
 frontend grafana_frontend
-    bind *:3000 ssl crt /etc/haproxy/certs/grafana.pem alpn h2,http/1.1
+    bind *:80
+    bind *:443 ssl crt /etc/haproxy/certs/grafana.pem
     http-request redirect scheme https unless { ssl_fc }
+    mode http
     default_backend grafana_backend
+
 backend grafana_backend
+    mode http
+    option forwardfor
+    option httpchk HEAD / HTTP/1.1\r\nHost:localhost
     server grafana {{ hostvars[groups['monitoring'].0].ansible_host }}:3000 check
+    http-request set-header X-Forwarded-Port %[dst_port]
+    http-request add-header X-Forwarded-Proto https if { ssl_fc }
 
 frontend prometheus_frontend
     bind *:9090
